# mukoko-news

./: .env.example  .gitignore  .markdownlint.json  .mcp.json  .prettierignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  agents.md  api-schema.yml  auth.md  components.json  fly.toml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  review.md  tailwind.config.ts  tsconfig.json
fly-worker/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
fly-worker/migrations/: 001_schema.sql  001_seed.sql  002_seed.sql  003_schema_fixes.sql  004_pgvector_embeddings.sql  005_auth_columns.sql
fly-worker/src/: config.py  db.py  main.py  scheduler.py
fly-worker/src/api/: admin.py  analytics.py  articles.py  auth.py  auth_router.py  authors.py  categories.py  deps.py  engagement.py  feeds.py  health.py  platform_sync.py  search.py  sources.py  stats.py  stories.py  user.py
fly-worker/src/jobs/: ai_processor.py  cleanup.py  couchdb_migration.py  embedding_backfill.py  embedding_gen.py  engagement.py  health_checker.py  newsdata_collector.py  organization_bootstrapper.py  rss_collector.py  sync.py  trending.py
fly-worker/src/services/: ai_client.py  analytics.py  article_scraper.py  content_cleaner.py  couchdb.py  doris.py  embedding.py  embeddings.py  enrichment_notifier.py  entity_verifier.py  jwt.py  keyword_extractor.py  mongodb.py  (+6 more)
fly-worker/tests/: conftest.py  test_content_cleaner.py  test_engagement.py  test_newsdata_collector.py  test_quality_scorer.py  test_rss_parser.py  test_trigger_collect.py
(+290 files in other folders)
