[project]
name = "mukoko-news-api"
version = "2.0.0"
description = "Mukoko News API backend — FastAPI on Fly.io with Supabase Postgres"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "textstat>=0.7",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100
